[package]
name = "ic-ckbtc-minter-tyron"
version = "0.3.0"
edition.workspace = true
authors = ["Xalkan Duarte <xalkan@tyrondao.org>"]
description = "Tyron is a decentralized finance project focused on developing Syron SUSD, an overcollateralized stablecoin pegged to the U.S. dollar and backed by BTC. Powered by the Internet Computer, Tyron aims to provide users with seamless access to USD liquidity while leveraging the security and decentralization of Bitcoin."
documentation = "https://docs.tyrondao.org"

[[bin]]
name = "ic-ckbtc-minter-tyron"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.53"
bech32 = "0.9.0"
bs58 = "0.4.0"
candid = { workspace = true }
ciborium = { workspace = true }
hex = "0.4.3"
ic0 = "0.18.9"
ic-base-types = { path = "../../../types/base_types" }
ic-btc-interface = { workspace = true }
ic-canisters-http-types = { path = "../../../rust_canisters/http_types" }
ic-canister-log = { path = "../../../rust_canisters/canister_log" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-ckbtc-kyt = { path = "../../ckbtc/kyt" }
ic-crypto-extended-bip32 = { path = "../../../crypto/extended_bip32" }
ic-crypto-getrandom-for-wasm = { path = "../../../crypto/getrandom_for_wasm" }
ic-crypto-sha2 = { path = "../../../crypto/sha2" }
ic-management-canister-types = { path = "../../../types/management_canister_types" }
ic-icrc1 = { path = "../../../rosetta-api/icrc1" }
icrc-ledger-client-cdk = { path = "../../../../packages/icrc-ledger-client-cdk" }
ic-ledger-core = { path = "../../../rosetta-api/ledger_core" }
ic-metrics-encoder = "1"
ic-stable-structures = { workspace = true }
ic-utils-ensure = { path = "../../../utils/ensure" }
icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
lazy_static = "1.4.0"
minicbor = { workspace = true }
minicbor-derive = { workspace = true }
num-traits = "0.2.14"
ripemd = "0.1.1"
scopeguard = "1.1.0"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
ic-xrc-types = "1.0.0"
ordinals = { git = "https://github.com/ordinals/ord", tag = "0.17.1" }

[dev-dependencies]
assert_matches = "1.5.0"
bitcoin = "0.30.2"
candid_parser = { workspace = true }
canister-test = { path = "../../../rust_canisters/canister_test" }
ic-config = { path = "../../../config" }
ic-icrc1-ledger = { path = "../../../rosetta-api/icrc1/ledger" }
ic-state-machine-tests = { path = "../../../state_machine_tests" }
ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
ic-bitcoin-canister-mock = { path = "../../mock" }
proptest = "1.0"
simple_asn1 = { workspace = true }
